      downloading new consensus documents. Bridge users now wait until
      the end of the interval, so their bridge will be sure to have a
      new consensus document.

  o Minor bugfixes:
    - The fix in 0.2.0.12-alpha cleared the "hsdir" flag in v3 network
      consensus documents when there are too many relays at a single
      IP address. Now clear it in v2 network status documents too.
    - Don't crash if we get an unexpected value for the
      PublishServerDescriptor config option. Reported by Matt Edman;
      bugfix on 0.2.0.9-alpha.
    - Our new v2 hidden service descriptor format allows descriptors
      that have no introduction points. But Tor crashed when we tried
      to build a descriptor with no intro points (and it would have
      crashed if we had tried to parse one). Bugfix on 0.2.0.x; patch
      by Karsten Loesing.
    - Fix building with dmalloc 5.5.2 with glibc.
    - Reject uploaded descriptors and extrainfo documents if they're
      huge. Otherwise we'll cache them all over the network and it'll
      clog everything up. Reported by Aljosha Judmayer.
    - Check for presence of s6_addr16 and s6_addr32 fields in in6_addr
      via autoconf.  Should fix compile on solaris.
    - When the DANGEROUS_VERSION controller status event told us we're
      running an obsolete version, it used the string "OLD" to describe
      it. Yet the "getinfo" interface used the string "OBSOLETE". Now use
      "OBSOLETE" in both cases.

  o Minor features:
    - On USR1, when dmalloc is in use, log the top 10 memory
      consumers. (We already do this on HUP.)
    - Authorities and caches fetch the v2 networkstatus documents
      less often, now that v3 is encouraged.
    - Add a new config option BridgeRelay that specifies you want to
      be a bridge relay. Right now the only difference is that it makes
      you answer begin_dir requests, and it makes you cache dir info,
      even if your DirPort isn't on.